--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/main_layout_linear"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/revealed_answer"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/test_text"/>
+            android:gravity="center"/>
 
         <GridLayout
             android:id="@+id/image_grid"
@@ -29,17 +27,34 @@
 
             <ImageView
                 android:id="@+id/img_1"
+                android:layout_margin="0dp"
+                android:padding="0dp"
                 />
             <ImageView
                 android:id="@+id/img_2"
+                android:layout_margin="0dp"
+                android:padding="0dp"
                 />
             <ImageView
                 android:id="@+id/img_3"
+                android:layout_margin="0dp"
+                android:padding="0dp"
                 />
             <ImageView
                 android:id="@+id/img_4"
+                android:layout_margin="0dp"
+                android:padding="0dp"
                 />
         </GridLayout>
+        <GridLayout
+            android:id="@+id/button_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:rowCount="2"
+            android:columnCount="4">
+
+        </GridLayout>
+
 
     </LinearLayout>
 </RelativeLayout>
