--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/material_blue_grey_800"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -16,7 +17,10 @@
             android:id="@+id/revealed_answer"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold"/>
 
         <GridLayout
             android:id="@+id/image_grid"
